Add disable-search.js and integrate it into all HTML files

--- a/diary1.html
+++ b/diary1.html
@@ -332,7 +332,6 @@
             }, TYPING_DEBOUNCE);
         });
     </script>
-    <!-- Disable search functionality -->
-    <script src="../disable-search.js"></script>
+    <script src="./disable-search.js"></script>
 </body>
 </html>
