--- a/index.html
+++ b/index.html
@@ -1275,5 +1275,6 @@
             e.preventDefault();
         }, { passive: false });
     </script>
+    <script src="./disable-search.js"></script>
 </body>
 </html> 
