--- a/notebook.html
+++ b/notebook.html
@@ -1278,6 +1278,6 @@
             }
         });
     </script>
-    <script src="../disable-search.js"></script>
+    <script src="./disable-search.js"></script>
 </body>
 </html>
