--- a/scratch_card.html
+++ b/scratch_card.html
@@ -302,6 +302,6 @@
             window.parent.postMessage('closeModal', '*');
         });
     </script>
-    <script src="../disable-search.js"></script>
+    <script src="./disable-search.js"></script>
 </body>
 </html> 
