--- a/episode1.html
+++ b/episode1.html
@@ -1548,6 +1548,6 @@
             }
         });
     </script>
-    <script src="../disable-search.js"></script>
+    <script src="./disable-search.js"></script>
 </body>
 </html> 
