--- a/flashcards.html
+++ b/flashcards.html
@@ -653,6 +653,6 @@
             }
         });
     </script>
-    <script src="../disable-search.js"></script>
+    <script src="./disable-search.js"></script>
 </body>
 </html>
